3.5 .2
